test/conformance/kuttl/policy-validation/cluster-policy/background-variables-update/02-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: policy-update.yaml
  shouldFail: false
