test/conformance/kuttl/policy-validation/cluster-policy/background-variables-update/policy-update.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-variables-update
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: ns-vars-userinfo
    match:
      any:
      - resources:
          kinds:
            - Pod
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: foo
